﻿$Revision$
	$Author$ $Date$
	1. меняем умолчания для отображения креста

#Revision: 1677
	Author: ctapmex Date: 2011-03-13 23:25:26 +0500 (Вс, 13 мар 2011)
	1. Far3 build 1907 API
	2. truemod пока не трогаем - надо переделывать сам far
	3. версию плагина не трогаем, иногда реализовывают пожелания трудящихся )

#Revision: 1673
	Author: ctapmex Date: 2011-03-10 18:06:00 +0500 (Чт, 10 мар 2011)
	1. переименовываем проект в pcolorer3

#Revision: 1662
	Author: ctapmex Date: 2011-02-28 14:40:46 +0500 (Пн, 28 фев 2011)
	1. работа с настройками плагина вынесена в отдельный класс и 
	 работает через API Far3
	2. Colorer переведен полностью на Far3 build 1895 API
	3. в связи с особенностями работы фар с версией плагина, меняем текущую версию
	 с 1.0.3.1 на 1.3.1
	4. плагин именуем FarColorer, а не Colorer

#Revision: 1661
	Author: ctapmex Date: 2011-02-27 00:40:10 +0500 (Вс, 27 фев 2011)
	1. меню Outliner

#Revision: 1660
	Author: ctapmex Date: 2011-02-26 23:37:42 +0500 (Сб, 26 фев 2011)
	1. диалоги настройки плагина

#Revision: 1659
	Author: ctapmex Date: 2011-02-26 12:03:16 +0500 (Сб, 26 фев 2011)
	1. починка меню плагина и меню выбора типа файла
	2. переименование экспортируемых функций

#Revision: 1658
	Author: ctapmex Date: 2011-02-26 11:05:28 +0500 (Сб, 26 фев 2011)
	1. обновлен far3sdk
	2. продолжаем адаптацию к новому API
	  - читаем настройки и сохраняем через far api (пока кроме hrc настроек)
	  - исправление вызова EditorControl , теперь колорер работает в редакторе

#Revision: 1657
	Author: ctapmex Date: 2011-02-24 17:15:01 +0500 (Чт, 24 фев 2011)
	1. адаптация к нововму API - исправление вызова функций, добавлены
	 новые экспортируеммые функции. Часть кода пока закомментировано.
	 плагин собирается, с фаром запускается. но не более.
	2. в far3sdk добавлена поддержка truemod.

#Revision: 1653-1655
	Author: ctapmex Date: 2011-02-23 23:28:40 +0500 (Ср, 23 фев 2011)
	1. готовимся к Far3
	2. Обновлено far sdk. учитываем , что оно не окончательно