@@ -8,14 +8,26 @@ class SettingsControl
 public:
   SettingsControl();
   ~SettingsControl();
-  
-  DWORD rGetValueDw(size_t Root, const wchar_t *name, DWORD DefaultValue);
-  const wchar_t *rGetValueSz(size_t Root, const wchar_t *name, const wchar_t *DefaultValue);
-  bool rSetValueDw(size_t Root, const wchar_t *name, DWORD val);
-  bool rSetValueSz(size_t Root, const wchar_t *name, const wchar_t *val);
-  int rGetSubKey(size_t Root, const wchar_t *name);
+
+  const wchar_t*   Get(size_t Root, const wchar_t *Name, const wchar_t *Default);
+  unsigned __int64 Get(size_t Root, const wchar_t *Name, unsigned __int64 Default);
+  __int64          Get(size_t Root, const wchar_t *Name, __int64 Default) { return (__int64)Get(Root,Name,(unsigned __int64)Default); }
+  int              Get(size_t Root, const wchar_t *Name, int Default)  { return (int)Get(Root,Name,(unsigned __int64)Default); }
+  unsigned int     Get(size_t Root, const wchar_t *Name, unsigned int Default) { return (unsigned int)Get(Root,Name,(unsigned __int64)Default); }
+  DWORD            Get(size_t Root, const wchar_t *Name, DWORD Default) { return (DWORD)Get(Root,Name,(unsigned __int64)Default); }
+  bool             Get(size_t Root, const wchar_t *Name, bool Default) { return Get(Root,Name,Default?1ull:0ull)?true:false; }
+
+  bool Set(int Root, const wchar_t *Name, unsigned __int64 Value);
+  bool Set(int Root, const wchar_t *Name, const wchar_t *Value);
+  bool Set(int Root, const wchar_t *Name, __int64 Value) { return Set(Root,Name,(unsigned __int64)Value); }
+  bool Set(int Root, const wchar_t *Name, int Value) { return Set(Root,Name,(unsigned __int64)Value); }
+  bool Set(int Root, const wchar_t *Name, unsigned int Value) { return Set(Root,Name,(unsigned __int64)Value); }
+  bool Set(int Root, const wchar_t *Name, DWORD Value) { return Set(Root,Name,(unsigned __int64)Value); }
+  bool Set(int Root, const wchar_t *Name, bool Value) { return Set(Root,Name,Value?1ull:0ull); }
+
+  int rGetSubKey(size_t Root, const wchar_t *Name);
   bool rEnum(size_t Root, FarSettingsEnum *fse);
-  bool rDeleteSubKey(size_t Root,const wchar_t *name);
+  bool rDeleteSubKey(size_t Root,const wchar_t *Name);
 
 private:
   HANDLE farSettingHandle;
